fix constraint testability for jBPM